--- a/English Chapters/3.2_MM_Linear_algebra.ipynb
+++ b/English Chapters/3.2_MM_Linear_algebra.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 Part 2 The mathematical minimum \n",
+    "# 3 Part 2 The mathematical minimum: Linear Algebra\n",
     "\n",
     "The second part of chapter 3 will cover linear algebra. Linear algebra is the framework for quantum computing, so it is very important to be familiar with. \n",
     "\n",
@@ -37,7 +37,9 @@
     "\\ket{v} = \\begin{bmatrix} v_0 \\\\ v_1 \\\\ \\vdots \\\\ v_{n-1} \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "Where the subscript $v_i$ indicates the i $^{th}$ component of $\\ket{v}$. Note the convention of starting from 0 and ending at $n-1$. This convention of counting from 0 is widely used in QC and conveniently is also used in python too. \n",
+    "Where the subscript $v_i$ indicates the i $^{th}$ component of $\\ket{v}$. \n",
+    "\n",
+    "*Imporant note:* We start counting from 0 and end at $n-1$. This convention of counting from 0 is widely used in QC and conveniently is also used in python too. \n",
     "\n",
     "### 3.2.2 Adding vectors\n",
     "\n",
@@ -204,12 +206,24 @@
     "\n",
     "$$M^{-1}M = MM^{-1} = I $$\n",
     "\n",
+    "As a matrix, the identity looks like \n",
     "\n",
+    "$$ \n",
+    "I = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}\n",
+    "$$\n",
     "\n",
     "\n",
     "### 3.3.4 Unitary matrices \n",
     "\n",
-    "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose. Conjugate means `\n",
+    "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose. \n",
+    "\n",
+    "This means \n",
+    "\n",
+    "$$\n",
+    "U^\\dagger U = I \n",
+    "$$\n",
+    "\n",
+    "All quantum gates are unitary matrices, it is very common to see the term unitary when talking about any quantum circuit. \n",
     "\n",
     "\n",
     "### Chapter 3 Part 2 Summary \n",
@@ -221,7 +235,7 @@
     "- Matrices are arrays of numbers that can act on vectors \n",
     "- Applying a matrix to a vector turns the vector into another vector\n",
     "- Matrices can have an inverse which does the reverse of the matrix \n",
-    "- Unitary matrices have an inverse equal to their complex transpose\n"
+    "- Unitary matrices have an inverse equal to their conjugate transpose"
    ]
   }
  ],
