Wording improvements chapter 2,3.1
General consistency improvements

--- a/English Chapters/3.1_MM_Trigonometry_Complex.ipynb
+++ b/English Chapters/3.1_MM_Trigonometry_Complex.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 The mathematical minimum \n",
+    "# 3 Part 1 The mathematical minimum: Complex numbers \n",
     "\n",
     "Whilst this work is not intended to be a textbook on mathematics, it is worth outlining the core maths essential to understanding quantum information. Beyond the scope of this course, there are a great many applications of the mathematics covered in this textbook. A much richer understanding of the physical world can be understood by applying these topics to the nature of light, itself quantum fundamentally, as well as machine learning and many fields of engineering. \n",
     "\n",
@@ -23,16 +23,7 @@
     "\n",
     "The triangle here is defined by the angle $\\theta$ with a base of length $cos(\\theta)$ & a height of $ sin(\\theta)$. We can say the base is $ x = cos(\\theta)$ and the height is $ y = sin(\\theta)$.\n",
     "\n",
-    "\n",
-    "\n",
-    "Using Pythagoras theorem, usually stated as $ a^2 +b^2 = c^2$ where $c$ is the hypotenuse and $a,b$ are the remaining sides, one may easily derive the important equation: \n",
-    "\n",
-    "$$ sin^2(\\theta) + cos^2(\\theta) = 1 $$\n",
-    "\n",
-    "This relationship will show up again later. \n",
-    "\n",
-    "In later chapters, quantum circuits will be described in terms of rotations around a higher dimensional sphere. \n",
-    "\n"
+    "In later chapters, quantum circuits will be described in terms of rotations around a higher dimensional sphere. "
    ]
   },
   {
@@ -45,7 +36,7 @@
     "\n",
     "### 3.2.1 The square root of -1 \n",
     "\n",
-    "There are two square roots of $4$: $+2$ & $-2$. For numbers that aren't integers there are algorithms we can run on our calculators to work out the roots to arbitrary precision. In physics there are many situations in which the only valid solution to a particular equation calls for the square root of a negative number. To make this work, it is necessary to first define the square root of $-1$ as $i = \\sqrt{-1}$. \n",
+    "There are two square roots of $4$: $+2$ \\& $-2$. For numbers that aren't integers there are algorithms we can run on our calculators to work out the roots to arbitrary precision. In physics there are many situations in which the only valid solution to an equation calls for the square root of a negative number. To make this work, it is necessary to first define the square root of $-1$ as $i = \\sqrt{-1}$. \n",
     "\n",
     "Using some basic algebra we can factorise any surd (square root number) into a product of two surds $ \\sqrt{ab} = \\sqrt{a} \\times \\sqrt{b}$. This holds true for negative numbers allowing us to take the square root of any negative number by breaking it down into the square root of $-1$ and the positive magnitude of that number. This can be written as:\n",
     "\n",
@@ -118,17 +109,21 @@
     " |z| = \\sqrt{a^2 + b^2}\n",
     " $$\n",
     "\n",
-    " With $z = a + bi$. \n",
+    " With $z = x + yi$. \n",
     "\n",
-    " The magnitude of a complex number is important for figuring out the probability of getting a particular output from a quantum computation. \n",
+    "\n",
+    " The magnitude of a complex number is important for figuring out the probability of getting an output from a quantum computation. This will be explored in chapter 4.\n",
     "\n",
     " ### Exercise 3.2 \n",
     "\n",
     " Consider the complex number $z = 3 + 5i$ . \n",
     "\n",
     " i. What is the complex conjugate of $z$, $z^*$?\n",
+    " \n",
     " ii. What is the magnitude of $z$?\n",
     "  \n",
+    "\n",
+    "iii. What is the magnitude of $z^*$?\n",
     "\n",
     "### 3.2.5 Euler's formula\n",
     "\n",
