Added additional solutions for chapter 4
Added more solutions for chapter 4 questions

--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -34,7 +34,23 @@
     "\n",
     "## 5.3 Qubit Gates \n",
     "\n",
-    "\n"
+    "As mentioned in Chapter 4, operators are what allow us to process quantum information. \n",
+    "\n",
+    "\n",
+    "- Gate\n",
+    "- Action on computational basis \n",
+    "- Matrix Representation \n",
+    "- Description \n",
+    "\n",
+    "Pauli matrices: I, X, Y, Z\n",
+    "\n",
+    "I: does nothing \n",
+    "X: changes 0 to 1 and 1 to 0 \n",
+    "Y: \n",
+    "\n",
+    "Phase S, T \n",
+    "\n",
+    "Hadamard H "
    ]
   }
  ],
