--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -64,7 +64,18 @@
     "\n",
     "## 6.4 Product States \n",
     "\n",
-    "If we act on a collection of qubits individually, they can be seperated. \n",
+    "\n",
+    "So far we have acted on all our qubits seperately, what happens to one doesn't affect the others. If we were to measure one of the qubits, it wouldn't tell us anything about the other qubits. \n",
+    "\n",
+    "Such states where we can seperate the qubits out are called product states. \n",
+    "\n",
+    "In general a product state can be written as \n",
+    "\n",
+    "$$ \\ket{\\Psi} = \\ket{\\psi_0}\\ket{\\psi_1}...\\ket{\\psi_{n-1}}$$\n",
+    "\n",
+    "Let's say we measure the first qubit (qubit 0) and get a 0. The remaining qubits wouldn't be affected, so our new state would be \n",
+    "\n",
+    "$$ \\ket{\\Psi} = \\ket{0}\\ket{\\psi_1}...\\ket{\\psi_{n-1}}$$\n",
     "\n",
     "\n",
     "## 6.5 Entangled States \n",
@@ -74,7 +85,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "## 6.6 If statements with spicy sauce \n",
     "\n",
     "\n",
     "\n",
