--- a/English Chapters/7_Quantum_circuits.ipynb
+++ b/English Chapters/7_Quantum_circuits.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "## 7 Quantum Circuits\n",
     "\n",
-    "A quantum ciruit is a diagram that codifies how entanglement and superposition can be implemented on a set of qubits and measured in order to carry out a specific quantum algorithm. "
+    "A quantum ciruit is a diagram showing the operations that act on qubits to carry out a computation. All quantum circuits have 3 parts:\n",
+    "\n",
+    "1. Start your qubits in an initial quantum state\n",
+    "2. Perform a series of single and 2 qubit gates \n",
+    "3. Measure the qubits \n",
+    "\n",
+    " "
    ]
   }
  ],
