--- a/English Chapters/solutions.ipynb
+++ b/English Chapters/solutions.ipynb
@@ -6,7 +6,16 @@
    "source": [
     "# Solutions to exercises \n",
     "\n",
-    "### 4.1\n",
+    "\n",
+    "## Chapter 3 The Mathematical minimum \n",
+    "\n",
+    "### 3.1\n",
+    "### 3.2 \n",
+    "### 3.3  \n",
+    "\n",
+    "\n",
+    "## Chapter 4 Dirac Notation\n",
+    "### 4.1 \n",
     "\n",
     "\n",
     "If the probability of measuring heads is $P$, then the probability amplitude for $H$ is $sqrt(P)$. The probability of getting tails is $ P(T) = 1 - P(H)$ which gives $P(T) = 1 -P$. \n",
@@ -19,7 +28,43 @@
     "\n",
     "$$ \\ket{\\psi} = \\sqrt{P} \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} + \\sqrt{1-P} \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} $$\n",
     "\n",
-    "\n"
+    "\n",
+    "### 4.2 Expectation values\n",
+    "\n",
+    "\n",
+    "We could write the expectation, E would be\n",
+    "\n",
+    "$$\n",
+    "E = \\sum_{i = 1}^{6} i \\times P(i)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "E = 1 \\times \\frac{1}{6} + 2 \\times \\frac{1}{6} + 3 \\times \\frac{1}{6} +  4 \\times \\frac{1}{6} + 5 \\times \\frac{1}{6} + 6 \\times \\frac{1}{6}  \n",
+    "$$\n",
+    "\n",
+    "$$  = \\frac{21}{6} = 3.5 $$ \n",
+    "\n",
+    "So we would expect, on average, to get a number a little more than 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">>>>>>>>>> Figure out where to put this \n",
+    "\n",
+    "\n",
+    "The exercise *4.2* can be done instead by introducing an operator. We can define the number operator $N$ which multiplies the state by the number it is in. So for instance \n",
+    "\n",
+    "$$ N \\ket{4} = 4\\ket{4} $$\n",
+    "\n",
+    "This operator effectively scales the state by the number. As a matrix this looks like \n",
+    "\n",
+    "$$ N = \\begin{bmatrix} 1 & 0 & 0 & 0 & 0 & 0 \\\\0 & 2 & 0 & 0 & 0 & 0  \\\\ 0 & 0 & 3 & 0 & 0 & 0 \\\\ 0 & 0  & 0 &4 & 0 & 0 \\\\ 0 & 0 & 0 & 0 & 5 & 0 \\\\ 0 & 0 & 0 & 0 & 0 & 6 \\end{bmatrix} $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "Computing each probability for every amplitude is not too much work when there are only 6 possible outcomes. But imagine instead if there were a million possible outcomes. Then we would need to compute a million different probabilities. A million outcomes might sound like lot, nobody has a million sided dice lying around,  but that can be achieved with just 20 qubits. Rather than compute the expectation value by computing each probability one by one, we can use vectorisation to parallelise this computation using operators. "
    ]
   }
  ],
