Renamed 3.1, made more concise, added examples

--- a/English Chapters/3.1_Complex_numbers.ipynb
+++ b/English Chapters/3.1_Complex_numbers.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 Part 1 The mathematical minimum: Complex numbers \n",
+    "# 3 Part 1  Complex numbers \n",
     "\n",
-    "Whilst this work is not intended to be a textbook on mathematics, it is worth outlining the core maths essential to understanding quantum information. Beyond the scope of this course, there are a great many applications of the mathematics covered in this textbook. A much richer understanding of the physical world can be understood by applying these topics to the nature of light, itself quantum fundamentally, as well as machine learning and many fields of engineering. \n",
-    "\n",
-    "Readers with a more rigorous mathematical background may find this material rather basic but may still appreciate the explanations and relationships between the topics. \n",
+    "Whilst this work is not intended to be a textbook on mathematics, it is worth outlining the core maths essential to understanding quantum compting. Readers with a more rigorous mathematical background may find this material rather basic but may still appreciate the explanations and relationships between the topics. \n",
     "\n",
     "The first part of this chapter will cover some trigonometry and complex numbers. \n",
     "\n",
@@ -16,14 +14,14 @@
     "\n",
     "Trigonometry is defined as \"*the branch of mathematics dealing with the relations of the sides and angles of triangles and with the relevant functions of any angles*\" but for our use it is much better to consider trigonometry the study of rotations. In later chapters, quantum gates will be described as rotations. \n",
     "\n",
-    "Mathematically, a triangle can be made to any size but for quantum information only triangles with the longest side (the hypotenuse) equal to 1 need to be considered. All the triangles that satisfy this requirement can be drawn within a circle of radius 1 as shown below: \n",
+    "Consider a circle with radius 1. Any point on the circle can be reached by rotating on the surface by an angle. The figure below shows how we can reach any point.\n",
     "\n",
     "![Unit_circle](Images\\TrigonometryUnitCircle_700.png)\n",
     "[2]\n",
     "\n",
-    "The triangle here is defined by the angle $\\theta$ with a base of length $cos(\\theta)$ & a height of $ sin(\\theta)$. We can say the base is $ x = cos(\\theta)$ and the height is $ y = sin(\\theta)$.\n",
+    "The point P is reached by the angle $\\theta$. It has coordinates $x = cos(\\theta)$ and $ y = sin(\\theta)$.\n",
     "\n",
-    "In later chapters, quantum circuits will be described in terms of rotations around a higher dimensional sphere. "
+    "In chapter 5, quantum gates will be described in terms of rotations around a higher dimensional sphere. "
    ]
   },
   {
@@ -185,7 +183,7 @@
    "source": [
     "## Chapter 3 Part 1 Summary \n",
     "\n",
-    "- Any point on the unit circle can be described by \n",
+    "- Any point on the unit circle can be described by an angle\n",
     "- Imaginary numbers are a multiple of $\\sqrt{-1} = i $\n",
     "- Complex numbers have a real and imaginary part \n",
     "- Every complex number has a complex conjugate which has the negative imaginary part\n",
