--- a/English Chapters/3.1_Complex_numbers.ipynb
+++ b/English Chapters/3.1_Complex_numbers.ipynb
@@ -19,7 +19,7 @@
     "![Unit_circle](Images\\TrigonometryUnitCircle_700.png)\n",
     "[2]\n",
     "\n",
-    "The point P is reached by the angle $\\theta$. It has coordinates $x = cos(\\theta)$ and $ y = sin(\\theta)$.\n",
+    "The point P is reached by the angle $\\theta$. It has coordinates $x = \\cos(\\theta)$ and $ y = \\sin(\\theta)$.\n",
     "\n",
     "In chapter 5, quantum gates will be described in terms of rotations around a higher dimensional sphere. "
    ]
