--- a/English Chapters/3.2_Linear_algebra.ipynb
+++ b/English Chapters/3.2_Linear_algebra.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "## 3.2 Linear Algebra \n",
     "\n",
-    "Like trigonometry, linear algebra underpins most of physics, engineering and computer science. Its importance is difficult to overstate. In 1939, Paul Dirac reformulated quantum mechanics using linear algebra [1]. His contributions to the development of quantum theory are significant and the notation used to describe quantum states with vectors is known as Dirac notation ( to be covered more in chapter 4). There are two key elements to linear algebra: vectors and matrices. \n",
+    "Like trigonometry, linear algebra underpins most of physics, engineering and computer science. Its importance is difficult to overstate. In 1939, Paul Dirac reformulated quantum mechanics using linear algebra [1]. Linear algebra is so important that this way of descibing quantum mechanics is known as matrix mechanics. There are two key elements to linear algebra: vectors and matrices. \n",
     "\n",
     "\n",
     "### 3.2.1 Vectors\n",
     "\n",
-    "Vectors are objects that have both direction & magnitude. Velocity is a vector because it has a magnitude, the speed at which the object travels with, and a direction, where it's moving towards. In linear algebra, a vector can be denoted by putting an arrow over a letter as $ \\ket{v} $ .\n",
+    "Vectors are objects that have both direction & magnitude. Velocity is a vector because it has a magnitude, the speed at which the object travels with, and a direction, where it's moving towards. We will use a different notation to represent a vector with a straight line and an angled bracket as $ \\ket{v} $ .\n",
     "\n",
     "Imagine a car travelling diagonally across a road. At the same time, the car is travelling along the direction of the road as well as perpendicularly across the road. It can be said that the velocity of the car has a component pointing along the road and another component across the road. \n",
     "\n",
@@ -247,9 +247,6 @@
     "All quantum gates are unitary matrices, it is very common to see the term unitary when talking about any quantum circuit. \n",
     "\n",
     "The conjugate transpose is the same process as it is to turn a ket (column vector) into a bra (row vector). Take You swap the rows and the columns and then replace every imaginary number with the negative version. \n",
-    "\n",
-    "For example, the \n",
-    "\n",
     "\n",
     "### Chapter 3 Part 2 Summary \n",
     "\n",
