--- a/English Chapters/2_What_is_quantum_computing.ipynb
+++ b/English Chapters/2_What_is_quantum_computing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## 2. What is quantum computing\n",
     "\n",
-    "In the previous chapter, some of the fundamental concepts of quantum mechanics were introduced and their relevance to quantum computing was briefly explained. Building on that, this chapter will provide a bit more detail on how quantum computers employ such esoteric, exotic phenomena for practical applications.\n"
+    "In the previous chapter, the fundamental concepts of quantum mechanics were demystified and their relevance to quantum computing was explained. Building on that, this chapter will explain how quantum computers can unlock real-world value."
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "### 2.3 Quantum Algorithms \n",
     "\n",
-    " Conventional computers are really great at what they do. The field of high-performance computing has had many decades to mature. According to Top500, an index tracking the most powerful supercomputers, the most powerful supercomputer, Fugaku is a $1bn powerhouse. It consumes 29,899 kilowatts to power 7,630,848 cores. For context, a mid-range laptop today might have 6 cores and consume a total of around 30 watts of power. \n",
+    " Conventional computers are really great at what they do. The field of high-performance computing has had many decades to mature. According to Top500, an index tracking the most powerful supercomputers, the most powerful supercomputer, Fugaku is a $1bn powerhouse. It consumes 29,899 kilowatts to power 7,630,848 cores. For context, a mid-range laptop today might have 6 cores and consume a total of around 20 watts of power. \n",
     "\n",
     " For both machines, they execute algorithms that take an input and generate outputs in a similar manner. Whilst they are both excellent at solving a great many problems, there are two things they can't handle so well: superposition & entanglement. \n",
     "\n",
@@ -66,9 +66,47 @@
     "\n",
     "If our conventional computers perform so many tasks better, there must be some motivation for quantum computing being such an exciting area of research. Aside from the elegance of manipulating quantum states, quantum computing is expected to be more useful than a glorified coin tossing simulator. Despite the limitations in state-of-the-art quantum computing machines, it is known of a few valuable applications where quantum algorithms *theoretically outperform* the best availible classical solution. In these specific applications it is said there is a proven *quantum advantage* as using the quantum computer derives some benefit to the user for that application. \n",
     "\n",
-    "Whether or not it is worth using a quantum computer for a specific task is a very complicated question. It is not as simple as finding out if a quantum computer is faster but also whether the output of the quantum computer is better than what could have been done with conventional algorithms on a powerful classical computer. As of the time of writing, there has been no practical demonstration of a problem with real world (outside experimental physics) problem where using a quantum computer was better than using the tried and tested classical solution. As quantum computers become increasingly powerful it is hoped that this threshold will be crossed in the next few years...\n",
     "\n",
-    "TODO: include graph on quantum speedups\n",
+    "Whether or not it is worth using a quantum computer for a specific task is a very complicated question. It is not as simple as finding out if a quantum computer is faster but also whether the output of the quantum computer is better than what could have been done with conventional algorithms on a powerful classical computer. \n",
+    "\n",
+    "There are a few different ways a quantum computer could add value: \n",
+    "\n",
+    "- Solve a problem faster for better decision making\n",
+    "- Provide more accurate solutions that are more useful \n",
+    "- Consume less energy and thus cost less to run \n",
+    "- Enable entirely new models & solutions to solve problems that previously couldn't be solved\n",
+    "\n",
+    "\n",
+    "As of the time of writing, there has been no practical demonstration of a problem with real world (outside experimental physics) problem where using a quantum computer was better than using the tried and tested classical solution. As quantum computers become increasingly powerful it is hoped that this threshold will be crossed in the next few years...\n",
+    "\n",
+    "> TODO: include graph on quantum speedups\n",
+    "\n",
+    "### 2.5 Applications of Quantum Computing \n",
+    "\n",
+    "There are a great many practical difficulties in implementing QC. Even still, last year [over $3 billion was invested into quantum computing](https://www.mckinsey.com/business-functions/mckinsey-digital/our-insights/quantum-computing-funding-remains-strong-but-talent-gap-raises-concern). Why is there so much hype around such an early-stage technology? \n",
+    "\n",
+    "There are many industries expecting significant value creation from quantum computing: \n",
+    "\n",
+    "- Pharmaceuticals: Develop better medicine by simulating drugs more quickly & accurately  \n",
+    "- Supply chain & logistics: Quantum computing to optimise supply chains \n",
+    "- Finance: Portfolio optimisation & fraud detection by simulation of stochastic variables\n",
+    "- Enviornmental: Simulation of chemistry for batteries, solar cells & materials\n",
+    "- Science: Simulation of quantum systems to better understand the universe\n",
+    "\n",
+    "In addition to potential direct impacts, there are a lot of potential benefits to developing the hardware. Being able to measure qubits better can help develop quantum sensors with applications in healthcare & navigation. \n",
+    "\n",
+    "\n",
+    "### 2.6 Similarities to machine learning \n",
+    "\n",
+    "There are quite a few similarities between quantum computing & machine learning \n",
+    "\n",
+    "- Built on linear algebra\n",
+    "- Expensive computational resource costs held them back for many years\n",
+    "- Can be very difficult to explain outcomes \n",
+    "- Likey to go through period of hype & stagnation as technological development pace changes\n",
+    "- Often associated with optimisation problems \n",
+    "\n",
+    "It's an open question as to whether or not quantum computing can improve machine learning. Given the very limited number (& quality) of qubits availible there haven't been any large-scale tests yet. This is likely to change in the near future...\n",
     "\n",
     "## Chapter 2 Summary \n",
     "\n",
