--- a/English Chapters/4_Dirac_Notation.ipynb
+++ b/English Chapters/4_Dirac_Notation.ipynb
@@ -62,6 +62,9 @@
     "\n",
     "$$ \\ket{\\psi} = \\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} $$\n",
     "\n",
+    "\n",
+    "> This is a very important state, so it has its own symbol, $\\ket{+}$.\n",
+    "\n",
     "Instead, if there were a biased coin which had a probability of heads given by $P$, the probability of tails would then be $1-P$. The state of the spinning coin could be represented as\n",
     "\n",
     "$$\n",
@@ -75,6 +78,7 @@
     "\\sqrt{P} \\\\ \\sqrt{1-P}\n",
     "\\end{bmatrix}\n",
     "$$\n",
+    "\n",
     "\n",
     "### Exercise 4.1 \n",
     "\n",
@@ -181,7 +185,6 @@
     "### Exercise 4.2\n",
     "\n",
     "Using the defintion of the measurement probability, calulate the probability of measuring heads and the probability of measuring tails. Verify that these add to 1. \n",
-    "\n",
     "\n",
     "\n",
     "\n",
