--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -10,48 +10,156 @@
     "\n",
     "Having introduced some of the basic mathematics to describe quantum computing, let's get started. \n",
     "\n",
-    "On the many articles and news reports on quantum computing, QC is explained using the idea of qubits. This chapter will use the mathematical concepts to describe how individual qubits work. \n",
+    "Almost all articles or news reports talking about quantum computing start off by explaining how qubits are different from classical bits. This chapter will use the maths from previous chapters to give a better description of these qubits. \n",
     "\n",
-    "Like the previous example of the coin, a qubit has 2 states we can observe it in $\\ket{0}$ & $\\ket{1}$.\n",
+    "Earlier, the coin example was introduced with the heads & tails outcomes we can observe. A qubit also has 2 outcomes called $\\ket{0}$ & $\\ket{1}$, we can just replace $\\ket{H}$ with $\\ket{0}$ and $\\ket{T}$ with $\\ket{1}$. \n",
     "\n",
-    "Just as with the coins, we can have any probability of measuring $\\ket{0}$ & $\\ket{1}$ (so long as all the probabilities add to 1). \n",
+    "$$\n",
+    "\\ket{0} = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} ; \\ket{1} = \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} \n",
+    "$$\n",
     "\n",
-    "\n",
-    "\n",
+    "Just as with the coins, our qubits can be in a superposition of $\\ket{0}$ & $\\ket{1}$. We can have any probability of measuring $\\ket{0}$ & $\\ket{1}$ (so long as all the probabilities are real positive numbers which add to 1). \n",
     "\n",
     "\n",
     "\n",
     "\n",
     "## 5.2 The Bloch Sphere \n",
     "\n",
-    "Dirac notation is really useful for doing algebra with quantum states. It is easy to manipulate wavefunctions as vectors and calulate probabilities with the inner product. One limitation of Dirac notation is that it is difficult to visualise quantum states as it does not have a diagram to represent the wavefunction on. \n",
+    "Dirac notation is really useful for doing algebra with quantum states. We can model how the qubits change using vectors and calulate probabilities with the inner product. One limitation of Dirac notation is that it is difficult to visualise quantum states as it does not have a diagram to represent the state vector on. \n",
     "\n",
-    "The Bloch sphere is a useful tool used to represent the state of qubits. \n",
+    "The Bloch sphere is a useful tool used to represent the state of a qubit. Below, the quantum state $\\ket{\\psi}$ is represented on the Bloch Sphere. \n",
     "\n",
-    "For our qubit, we can represent the probability amplitudes on a circle of radius 1 (see 3.4 for the visualisation). The negtaive amplitudes get squared to give positive probabilities. However this is not enough to represent our qubits. \n",
+    "![Bloch_sphere](Images\\Bloch_Sphere.png) [1]\n",
+    "\n",
+    "\n",
+    "At the top of the sphere  is the state $\\ket{0}$, at the botom is the state $\\ket{1}$. Our state $\\ket{\\psi}$ is somewhere in between so it is a superposition of $\\ket{0}$ & $\\ket{1}$. The closer $\\ket{\\psi}$  is to the top, the greater the probability of measuring $\\ket{0}$, the same is true for the bottom with $\\ket{1}$. The angle $\\theta$ between the $\\ket{0}$ & $\\ket{\\psi}$ gives us these probabilities. \n",
+    "\n",
+    "Notice how $\\ket{0}$ and $\\ket{1}$ are seperated by $180\\degree (\\pi)$ on the sphere, but they are perpendicular, so the angle between them is actually $90\\degree (\\pi/2)$. The angles on the Bloch sphere are twice as large as the angles for the qubits.\n",
+    "\n",
+    "> Note: the angle which gives the probabilities is $\\theta/2$ \n",
+    "\n",
+    "$$\n",
+    "P(\\ket{0}) = \\braket{0|\\psi} = (\\cos{\\theta/2})^2\n",
+    "$$\n",
+    "Similarly for the probability of $\\ket{1}$\n",
+    "\n",
+    "$$P(\\ket{1}) = \\braket{0|\\psi} = (\\sin{\\theta/2})^2$$\n",
     "\n",
     "A useful tool for understanding the Bloch sphere [can be found here](https://javafxpert.github.io/grok-bloch/)\n",
     "\n",
-    "## 5.3 Qubit Gates \n",
+    "### Exercise 5.1 \n",
     "\n",
-    "As mentioned in Chapter 4, operators are what allow us to process quantum information. \n",
+    "We know the superposition state has equal probabilities of $\\ket{0}$ & $\\ket{1}$, where on the Bloch sphere would this state be represented? What is the angle $\\theta$ that would describe this state?\n",
+    "\n",
+    "## 5.3 It's not just a phase!\n",
+    "\n",
+    "To show probabilities, a single angle is enough. So why do we need a sphere? \n",
+    "\n",
+    "There is another important parameter that describes a qubit: the phase. \n",
+    "\n",
+    "At last, our coins will not work to describe phase, there is no analogue in classical computing, nor in probability. \n",
+    "\n",
+    "Two quantum states can have the same probabilities, but be completely different states.\n",
+    "\n",
+    "For example, earlier the flip coin operator $F$ had this form:\n",
+    "\n",
+    "$$\n",
+    "F =  \\frac{1}{\\sqrt{2}} \\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "In quantum computing, this operator is known as a __Hadamard gate__ with symvbol $H$. \n",
+    "\n",
+    "If we apply $H$ to $\\ket{0}$ we get the superposition state \n",
+    "\n",
+    "$$\n",
+    "H\\ket{0} = \\frac{1}{\\sqrt{2}} ( \\ket{0} + \\ket{1}) = \\ket{+}\n",
+    "$$\n",
+    "\n",
+    "Applying it to $\\ket{1}$ gives us a different superposition state: \n",
+    "\n",
+    "$$\n",
+    "H\\ket{1} = \\frac{1}{\\sqrt{2}} ( \\ket{0} - \\ket{1}) = \\ket{-}\n",
+    "$$\n",
+    "\n",
+    "We call this state $\\ket{-}$ because of the minus sign between the $\\ket{0}$ & $\\ket{1}$\n",
+    "\n",
+    "The probability of getting $\\ket{0}$ or $\\ket{1}$ is the same for both, so they're the same state? \n",
+    "\n",
+    "Nope. \n",
+    "\n",
+    "In fact, there is an easy way for us to tell which one we have. \n",
+    "\n",
+    "What happens if we apply $H$ on these states? \n",
+    "\n",
+    "$$ H\\ket{+} = H \\frac{1}{\\sqrt{2}} ( \\ket{0} + \\ket{1})$$\n",
+    "\n",
+    "$$= \\frac{1}{\\sqrt{2}} (H\\ket{0} + H\\ket{1})$$\n",
+    "\n",
+    "$$ = \\frac{1}{\\sqrt{2}}\\left( \\frac{1}{\\sqrt{2}}(\\ket{0} + \\ket{1})+\\frac{1}{\\sqrt{2}}(\\ket{0} - \\ket{1}))  \\right)$$\n",
+    "\n",
+    "The $\\ket{1}$'s cancel each other out and the $\\ket{0}$ add together to give us\n",
+    "\n",
+    "$$ = \\ket{0} $$\n",
+    "\n",
+    "So if we apply $H$ once to $\\ket{0}$ we get $\\ket{+}$ and then applying it again goes back to $\\ket{0}$. \n",
+    "\n",
+    "So if we ever have $\\ket{+}$ we apply $H$ and get $\\ket{0}$ 100% of the time. If we get $\\ket{1}$ we must have had another state to begin with. \n",
+    "\n",
+    "### Exercise 5.2\n",
+    "\n",
+    "Apply $H$ twice to $\\ket{1}$ and verify that it returns back $\\ket{1}$. \n",
+    "\n",
+    "### Exercise 5.3\n",
+    "\n",
+    " When we apply the Hadamard twice to a state, we get the same state back. Without doing any maths, consider flipping a coin. Why does flipping the coin twice not guarantee you get back the side you started with?\n",
     "\n",
     "\n",
-    "- Gate\n",
-    "- Action on computational basis \n",
-    "- Matrix Representation \n",
-    "- Description \n",
     "\n",
-    "Pauli matrices: I, X, Y, Z\n",
+    "Phases can be used to encode information, such as with the quantum Fourier transform, or to mark out quantum states (as with Grover's algorithm). \n",
     "\n",
-    "I: does nothing \n",
-    "X: changes 0 to 1 and 1 to 0 \n",
-    "Y: \n",
+    "> Phases only matter when they are relative. This means a phase difference between the different states. \n",
     "\n",
-    "Phase S, T \n",
+    "## 5.4 Qubit gates \n",
     "\n",
-    "Hadamard H "
+    "As mentioned in Chapter 4, operators are what allow us to do things to quantum states. Below are a collection of the most common single qubit operators. \n",
+    "\n",
+    "\n",
+    "Gate | Description| Effect on $\\ket{0}$| Effect on $\\ket{1}$ | Matrix \n",
+    "----- | ----- | ----- | ----- | -----|\n",
+    "I | Identity: do nothing | $\\ket{0} \\rightarrow  \\ket{0} $ | $\\ket{1} \\rightarrow \\ket{1}$ | $\\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$\n",
+    "X | Not: Swaps $\\ket{0}$ with $\\ket{1}$   |$\\ket{0} \\rightarrow \\ket{1}$ |$\\ket{1} \\rightarrow  \\ket{1}$ | $\\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix}$|\n",
+    "Y | Y: Rotation by angle $\\pi$ around the y-axis | $\\ket{0} \\rightarrow  \\ket{0} $ |$\\ket{1} \\rightarrow $ | |\n",
+    "Z | Z: Adds a phase of $e^{i\\pi}$ to $\\ket{1}$|$\\ket{0} \\rightarrow \\ket{0}$|$\\ket{1} \\rightarrow -\\ket{1}$ | |\n",
+    "H | Hadamard: Creates the superposition state | $\\ket{0} \\rightarrow \\frac{1}{\\sqrt{2}} ( \\ket{0} + \\ket{1})$ | $\\ket{1} \\rightarrow \\frac{1}{\\sqrt{2}} ( \\ket{0} - \\ket{1})$ | $\\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix} $\n",
+    "<!-- S | Adds a phase of $e^{\\pi/2}$ |$\\ket{0} \\rightarrow  \\ket{0} $ | \n",
+    "T | Adds a phase of $e^{\\pi/4}$| $\\ket{0} \\rightarrow  \\ket{0} $| | -->\n",
+    "\n",
+    "\n",
+    "## 5.5 Parameterised quantum gates \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Chapter 5 Summary \n",
+    "\n",
+    "- The state of a qubit can be represented on the Bloch sphere\n",
+    "- The BS shows the probability and phase of a qubit \n",
+    "- There are many qubit gates we can use to perform operations on qubits\n",
+    "\n",
+    "### References \n",
+    "\n",
+    "[1] Chetan Wake, 2019, Introduction to quantum computing part -1 Representation of qubit using Bloch sphere"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
