--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -4,36 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Yet Another Introduction to Quantum Computing\n",
-    "\n",
-    "*I will simply express my strong belief, that that point of self-education which consists in teaching the mind to resist its desires and inclinations, until they are proved to be right, is the most important of all, not only in things of natural philosophy, but in every department of dally life.* Michael Faraday (1859) [1]\n",
-    "\n",
-    "\n",
-    "This jupyter book (to be compiled) is a collection of notebooks introducing the fundamentals of quantum computation, including a preliminary introduction to quantum mechanics. It is assumed that the reader has some high school level of mathematics. A basic understanding of trigonometry is important. To the extent that it is practical, the mathematics needed is covered in Chapter 3. \n",
-    "\n",
-    "# 0. Recommended Reading \n",
-    "\n",
-    "Rather than *standing on the shoulders of giants* this work sits on a pile of textbooks, YouTube channels and online resources. In particular, a reader may benefit from the following materials: \n",
-    "\n",
-    "Great introduction materials:\n",
-    "\n",
-    "- [Introduction to Classical and Quantum Computing, Thomas G Wong](http://www.thomaswong.net/introduction-to-classical-and-quantum-computing-1e2p.pdf)\n",
-    "- Q is for Quantum, Terry Rudolph\n",
-    "\n",
-    "\n",
-    "\n",
-    "For more coding based understanding of QC:\n",
-    "\n",
-    "- [The Qiskit Textbook](https://qiskit.org/textbook/preface.html) \n",
-    "        - [Qiskit YouTube channel](https://www.youtube.com/c/qiskit)\n",
-    "- [Xanadu Quantum Codebok](https://codebook.xanadu.ai/) \n",
-    "\n",
-    "\n",
-    "For those with more experience of physics and maths (undergraduate level)\n",
-    "\n",
-    "- Quantum Computation and Quantum Information, Nielsen & Chuang \n",
-    "\n",
-    "In addition, each chapter may have some references with relevant links.\n",
     "## 1. What is Quantum?\n",
     "\n",
     "### 1.1 Common misconceptions about quantum \n",
@@ -57,15 +27,17 @@
     "\n",
     "### 1.3 So what happened to Schrödinger’s cat?\n",
     "\n",
-    "You may have heard of a very special cat associated with another German physicist, Schrodinger. In this analogy, a cat is kept inside a black box that the observer can't view inside. Within the box, there is also a vial of poison with a radioactive source. The radioactive source has an equal probability of decaying or not decaying in a particular time interval. If the source decays, the poison is released and the cat dies. otherwise the cat is just fine. Until the observer opens the box they don't know if the cat is dead or alive. \n",
+    "You may have heard of a very special cat associated with another German physicist, Schrodinger. In this analogy, a cat is kept inside a black box that the observer can't view inside. Within the box, there is also a vial of poison with a radioactive source. The radioactive source has an equal probability of decaying or not decaying in some time. If the source decays, the poison is released and the cat dies. otherwise the cat is just fine. Until the observer opens the box they don't know if the cat is dead or alive. \n",
     "![cat](Images\\standard_cat.png)\n",
     "[2]\n",
     "\n",
     "Schrodinger came up with this analogy to explain why quantum mechanics was so controversial for physicists that had been able to do very well with classical physics until the turn of the 20th century. This analogy is effective but is far removed from the everyday experiences one has, so another analogy can be made that encapsulates the same physics. \n",
     "\n",
     "\n",
+    "<p align=\"center\">\n",
+    "    It is as simple as tossing a coin.\n",
+    "</p>\n",
     "\n",
-    "*It is as simple as tossing a coin. * \n",
     "\n",
     "A normal coin has two faces: heads & tails. Assuming the coin is unbiased, When the coin is tossed there should be an equal probability of landing on a heads, $P(H)$ or a tails, $P(T)$, both equal to $1/2$. Here the extremely unlikely case where the coin lands on its round edge is not considered. When the coin has not yet landed, we can say it is in a particular state where it is *like being both* heads and tails at the same time. That's not to say there are 2 coins where 1 coin is heads up and the other coin is tails facing up*. Instead this means there is some uncertainty in the state of the coin. \n",
     "\n",
@@ -98,7 +70,11 @@
     "\n",
     "\n",
     "## Chapter 1 Summary \n",
-    "\n"
+    "\n",
+    "- The word quantum comes from quantised- or in discrete units \n",
+    "- A superposition happens when there are two possible states\n",
+    "- Entanglement happens when the outcomes of two indivudually random systems are correlated very strongly \n",
+    "- Quantum technologies use superposition & entanglement in their operation "
    ]
   },
   {
