#3 Removed clutter from Dirac Notation

--- a/English Chapters/4_Dirac_Notation.ipynb
+++ b/English Chapters/4_Dirac_Notation.ipynb
@@ -60,10 +60,10 @@
     "\n",
     "By adding the corresponding elements of each vector, this can be simplified to\n",
     "\n",
-    "$$ \\ket{\\psi} = \\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} $$\n",
+    "$$ \\ket{\\psi} = \\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} = \\ket{+}$$\n",
     "\n",
     "\n",
-    "> This is a very important state, so it has its own symbol, $\\ket{+}$.\n",
+    "> This superposition state has its own symbol, $\\ket{+}$.\n",
     "\n",
     "Instead, if there were a biased coin which had a probability of heads given by $P$, the probability of tails would then be $1-P$. The state of the spinning coin could be represented as\n",
     "\n",
@@ -80,13 +80,13 @@
     "$$\n",
     "\n",
     "\n",
-    "### Exercise 4.1 \n",
     "\n",
-    "Imagine a biased coin which is three times more likely to land on tails than on heads. Write down the corresponding state vector for such a coin.\n",
+    "> ### Exercise 4.1 \n",
+    ">\n",
+    ">Imagine a biased coin which is three times more likely to land on tails than on heads. Write down the corresponding state vector for such a coin.\n",
     "\n",
     "\n",
-    "### 4.1.2 How to describe any quantum system \n",
-    "\n",
+    "### 4.1.2 How to describe the qubits \n",
     "\n",
     "In general, our quantum computer can take a lot more than 2 possible outcomes. Thankfully we can just add a row to our column vector for every possible outcome. So we can describe our state in terms of each possible outcomes it can take. Our quantum computer can output any number up to some maximum.  We can write the state of any quantum computer in terms of all the possible states (numbers) we can get from it\n",
     "\n",
@@ -182,9 +182,11 @@
     "\\ket{\\psi} = \\begin{bmatrix} \\sqrt{P} \\\\ \\sqrt{1-P} \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "### Exercise 4.2\n",
+    " \n",
     "\n",
-    "Using the defintion of the measurement probability, calulate the probability of measuring heads and the probability of measuring tails. Verify that these add to 1. \n",
+    ">### Exercise 4.2\n",
+    ">\n",
+    ">Using the defintion of the measurement probability, calulate the probability of measuring heads and the probability of measuring tails. Verify that these add to 1. \n",
     "\n",
     "\n",
     "\n",
@@ -207,17 +209,21 @@
     "\n",
     "$$ |\\braket{\\psi|\\psi}|^2 = 1 $$\n",
     "\n",
-    "Another way of thinking about this is that for any quantum system, the probabilities of finding it in each of its states must add up to 1. This means $ |\\braket{\\psi|\\psi}|^2 = 1 $ must hold for any quantum state. \n",
+    "Another way of thinking about this is that for any quantum system, the probabilities of finding it in each of its states must add up to 1. \n",
+    "\n",
+    "> $ \\braket{\\psi|\\psi} = 1 $ must hold for any quantum state. \n",
+    "\n",
+    "This simplifies a lot of the maths. \n",
     "\n",
     "## 4.3 Operators: A trip to the casino \n",
+    "\n",
+    "### 4.3.1 What is an operator?\n",
     "\n",
     "An operator is a mathematical object that acts on a ket and returns a new ket. Operators are matrices that allow us to process quantum states. This is how we do quantum computing. \n",
     "\n",
     "Our operators are denoted by a capital letter, such as  $O$. They act on a quantum state $\\ket{\\psi}$ to return a new state $\\ket{\\psi'}$ as \n",
     "\n",
-    "$$\n",
-    "O\\ket{\\psi} = \\ket{\\psi'}\n",
-    "$$\n",
+    "$$O\\ket{\\psi} = \\ket{\\psi'}$$\n",
     "\n",
     "This is just a matrix-vector product. \n",
     "\n",
@@ -247,24 +253,20 @@
     "\n",
     "It turns out $Z$ is an important quantum logic gate!\n",
     "\n",
-    "It is easy to see how this could be scaled to any number of possible outcomes as a diagonal matrix. \n",
     "\n",
-    "Diagonal matrices are really easy to work with because they only need to do N multiplications. What's more interesting are the operators with off-diagonal elements. For example, the operator which performs the coin flip, we will call $F$ for now can be represented as \n",
-    "\n",
+    "We can invent another operator to perform the coin flip, we will call $F$ for now can be represented as \n",
     "\n",
     "$$\n",
     "F =  \\frac{1}{\\sqrt{2}} \\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "\n",
-    "### Exercise 4.3 Flip the coin \n",
-    "\n",
-    "By applying the flip operator to a coin that is heads up, show that it gives us the superposition state. \n",
-    "\n",
-    "Hint: compute the matrix-vector product of $F\\ket{H}$. \n",
-    "\n",
-    "Bonus question: what would you get if you did the same with the coin starting tails up?\n",
-    "\n",
+    ">### Exercise 4.3 Flip the coin \n",
+    ">\n",
+    ">By applying the flip operator to a coin that is heads up, show that it gives us the superposition state. \n",
+    ">\n",
+    ">Hint: compute the matrix-vector product of $F\\ket{H}$. \n",
+    ">\n",
+    "> Bonus question: what would you get if you did the same with the coin starting tails up?\n",
     "\n",
     "## 4.4 What do we expect to get?\n",
     "\n",
@@ -276,11 +278,9 @@
     "\n",
     "We know that half the time we will get $1, and half the time we will lose $1. \n",
     "\n",
-    "So our expected winnings, $\\braket{E}$ would be\n",
-    "\n",
-    "\n",
+    "So our expected winnings, $\\braket{W}$ would be\n",
     "$$\n",
-    "\\braket{E} = \\frac{1}{2} \\times 1 + \\frac{1}{2} \\times -1 \n",
+    "\\braket{W} = \\frac{1}{2} \\times 1 + \\frac{1}{2} \\times -1 \n",
     "=0\n",
     "$$\n",
     "\n",
@@ -288,23 +288,20 @@
     "\n",
     "More generally we can write the expectation value in terms of the value of each outcome and the probability \n",
     "\n",
-    "$$ \\braket{E} = \\sum_{i = 0}^{N-1} X_i \\times P(i) $$\n",
+    "$$ \\braket{W} = \\sum_{i = 0}^{N-1} X_i \\times P(i) $$\n",
     "\n",
     "Where $X_i$ is the outcome for event $i$ with probability $P(i)$ . \n",
     "\n",
-    "\n",
-    "### Exercise 4.4 Expectation value\n",
-    "\n",
-    "For this question, we're graduating from a coin to a dice. Let's call $N$ the number on a dice. Work out the expectation value by working out the number on each dice multiplied by the probability of rolling that number. \n",
-    "\n",
-    "\n",
-    "\n",
+    " \n",
+    ">### Exercise 4.4 Expectation value\n",
+    ">\n",
+    ">For this question, we're graduating from a coin to a dice. Let's call $N$ the number on a dice. Work out the expectation value by working out the number on each dice multiplied by the probability of rolling that number. \n",
     "\n",
     "### 4.4.2 A quantum description of probability \n",
     "\n",
     "So far this description of probability is entirely classical, even the use of angled brackets! A quantum description is more elegant. A perceptive reader might have noticed the similarities between the probability\n",
     "\n",
-    "$$ \\braket{E} = \\sum_{i = 0}^{N-1} X_i \\times P(i) $$\n",
+    "$$ \\braket{W} = \\sum_{i = 0}^{N-1} X_i \\times P(i) $$\n",
     "\n",
     "And the state vector\n",
     "\n",
@@ -322,7 +319,6 @@
     "\n",
     "And we can get the probability of getting $i$ from $\\braket{i|\\psi}$.\n",
     "\n",
-    "\n",
     "Adding up all the probabilities gives us the important result\n",
     "$$\n",
     "\\braket{Z} = \\braket{\\psi|Z|\\psi}\n",
@@ -333,13 +329,9 @@
     "$$\n",
     "\\frac{1}{\\sqrt{2}} \\begin{bmatrix} 1 & 1 \\end{bmatrix} \\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix} \\frac{1}{\\sqrt{2}} \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}\n",
     "$$\n",
-    "\n",
-    "\n",
     "$$\n",
     "= \\frac{1}{2}\\begin{bmatrix} 1 & 1 \\end{bmatrix} \\begin{bmatrix} 1 \\\\ -1 \\end{bmatrix}\n",
     "$$\n",
-    "\n",
-    "\n",
     "$$ = \\frac{1}{2} ( 1 - 1) = 0 $$ \n",
     "\n",
     "## Chapter 4 Summary \n",
